# serializer version: 1
# name: TestPasswordReset.test_password_reset_token_invalid_content
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
  
              <section class="s-title-02">
                  <div class="s-title-02__container container">
                      <div class="s-title-02__row row">
                          <div class="s-title-02__col col-12">
                              
                              
      
  
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  
                      Le lien de réinitialisation n'est pas valide
                  
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
                              
                              
                          </div>
                      </div>
                  </div>
              </section>
  
              
      <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      
  
                          
                          <p>
                              Il a peut être déjà été utilisé, ou expiré. Veuillez faire une nouvelle <a href="/accounts/password/reset/">demande de réinitialisation de mot de passe</a>.
                          </p>
  
                      
                  </div>
              </div>
          </div>
      </section>
  
          </main>
  '''
# ---
# name: TestPasswordReset.test_password_reset_user_creation
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
  
              <section class="s-title-02">
                  <div class="s-title-02__container container">
                      <div class="s-title-02__row row">
                          <div class="s-title-02__col col-12">
                              
                              
      
  
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  
                      Création de votre mot de passe
                  
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
                              
                              
                          </div>
                      </div>
                  </div>
              </section>
  
              
      <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      
  
                          
  
                              <form action="[change password form url]" class="js-prevent-multiple-submit" method="post">
  
                                  <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
  
                                  
  
                                  <div class="form-group form-group-required"><label class="form-label" for="id_password1">Nouveau mot de passe</label><div class="input-group">
      <input aria-describedby="id_password1_helptext" autocomplete="new-password" class="form-control" id="id_password1" name="password1" placeholder="Nouveau mot de passe" required="" type="password"/>
  
      <div class="input-group-text p-0">
          <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
              <i aria-hidden="true" class="ri-eye-line"></i>
              <span>Afficher</span>
          </button>
      </div>
  </div><div class="form-text" id="id_password1_helptext"><ul><li>Votre mot de passe ne peut pas trop ressembler à vos autres informations personnelles.</li><li>Votre mot de passe doit contenir au minimum 14 caractères.</li><li>Votre mot de passe ne peut pas être un mot de passe couramment utilisé.</li><li>Le mot de passe doit contenir au moins 3 des 4 types suivants : majuscules, minuscules, chiffres, caractères spéciaux.</li></ul></div>
  </div>
                                  <div class="form-group form-group-required"><label class="form-label" for="id_password2">Nouveau mot de passe (confirmation)</label><div class="input-group">
      <input class="form-control" id="id_password2" name="password2" placeholder="Nouveau mot de passe (confirmation)" required="" type="password"/>
  
      <div class="input-group-text p-0">
          <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
              <i aria-hidden="true" class="ri-eye-line"></i>
              <span>Afficher</span>
          </button>
      </div>
  </div></div>
  
                                  
                                  
  
  <div class="row">
      <div class="col-12">
          <hr class="mb-3"/>
          <small class="d-inline-block mb-3">* champs obligatoires</small>
          <div class="form-row align-items-center justify-content-end gx-3">
              <div class="form-group col-12 col-lg order-3 order-lg-1">
                  
                      <a aria-label="Annuler la saisie de ce formulaire" class="btn btn-link btn-ico ps-lg-0 w-100 w-lg-auto" href="/">
                          <i aria-hidden="true" class="ri-close-line ri-lg"></i>
                          <span>Annuler</span>
                      </a>
                  
              </div>
              
              <div class="form-group col col-lg-auto order-2 order-lg-3">
                  
                      <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" type="submit">
                          <span>Enregistrer le mot de passe</span>
                      </button>
                  
              </div>
          </div>
      </div>
  </div>
  
  
  
  
                              </form>
  
                          
  
                      
                  </div>
              </div>
          </div>
      </section>
  
          </main>
  '''
# ---
